refactor: add log on main